# palaterm

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  README.md  entry.py  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml  test.yml
palaterm/: __init__.py  app.py  canvas.py  canvas_geometry.py  commands.py  compositing.py  connectors.py  controllers.py  crossings.py  exporters.py  geometry.py  rendering.py  serialization.py  shapes.py  sidebar_state.py  style_application.py
palaterm/commands/: __init__.py  base.py  history.py  shape_commands.py
palaterm/controllers/: __init__.py  panel_controller.py  tool_controller.py
palaterm/models/: __init__.py  base.py  box.py  braille.py  charset.py  enums.py  line.py  rectangle.py  text.py
palaterm/tools/: __init__.py  draw.py  gestures.py  overlays.py  select.py
palaterm/widgets/: __init__.py  canvas.py  modals.py  status_bar.py  toolbar.py
palaterm/widgets/panels/: __init__.py  border_style.py  charset.py  collapsible.py  color_toolbar.py  export_toolbar.py  fill_style.py  layer.py  line_endings.py  line_style.py  select_mode.py  shape_align.py  text_align.py  tool_options.py  tool_picker.py  toolbar.py
scripts/: bench_render.py  bench_serialize.py  capture_selected.py  capture_toolbar.py  inspect_toolbar.py
tests/: conftest.py  fixtures.py  test_canvas_compositing.py  test_canvas_geometry.py  test_commands.py  test_crossings.py  test_exporters.py  test_models.py  test_overlays.py  test_rendering.py  test_serialization.py  test_sidebar_state.py
