[project]
name = "palaterm"
version = "0.1.0"
description = "A TUI drawing application inspired by MonoSketch"
requires-python = ">=3.11"
dependencies = [
    "textual==8.2.5",
    "pyperclip==1.9.0",
]

[project.scripts]
palaterm = "palaterm.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["palaterm"]
omit = [
    # Qt/Textual event loops and entry points are exercised by manual UI testing.
    "palaterm/app.py",
    "palaterm/widgets/*",
    "palaterm/tools/*",
    "palaterm/controllers.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

